2013-10-18  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.h  src/graphics.c  src/graphics.h src/save.c src/set.c 
	demo/all.dem demo/clipobject.dem docs/gnuplot.doc:
	New object attribute clip/noclip.  "clip" retains the current default,
	clip to plot boundary unless one or more vertices are given in screen
	coordinates.  "noclip" clips to the canvas.

2013-10-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.830

2013-10-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_objects):  Make clipping of various objects
	more consistent.  Clip to graph unless the center or some vertex is
	specified in screen coordinates.

	* src/save.c (save_object):  "show object N" was incorrectly printing
	lines for other objects as well.

2013-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c: DEFAULT_GRID_LP

	* src/plot2d.c: Issue warning if "smooth" option causes columns in the
	using spec to be ignored.

	* src/axis.c (gen_tics): Suppress log-scaled mtics and minor grid lines 
	that would lie on top of the major tic/grid.
	Bug #1292

	* src/pm3d.c: Allow "set pm3d top/bottom" and "set pm3d interpolate N,M"
	to be active at the same time.

	* src/unset.c (reset_key): Don't leak memory when resetting key title.

2013-10-11  Craig DeForest  <deforest@boulder.swri.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput):
	Handle TERM_ONLY_CHECK_MOUSING in the single-threaded code path.
	Bug #1293

2013-10-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput):  One code path followed
	in the case of piped input to a script with mousing enabled failed to 
	test for the new TERM_ONLY_CHECK_MOUSING flag.
	Bug #1293

2013-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf) axis.h: (REVERTED)

2013-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm term/cairo.trm term/canvas.trm term/emf.trm